--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@
     transition: 0.3s;
 }
 
-
 .header .inner {
     display: flex;
     align-items: center;
@@ -26,8 +25,59 @@
     gap: 40px;
 }
 
+.header .inner .gnb>ul>li {
+    position: relative;
+
+}
+
 .header .inner .gnb>ul>li>a {
+    display: block;
+    line-height: 100px;
     color: var(--white-color);
+}
+
+.header .inner .gnb .sub {
+    position: absolute;
+    top: 101px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 600px;
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    background: var(--white-color);
+
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+    border-right: 1px solid #ddd;
+}
+
+.header .inner .gnb>ul>li:hover .sub {
+    opacity: 1;
+    visibility: visible;
+    transition: 0.5s;
+}
+
+.header .inner .gnb .sub .sub_right {
+    padding: 24px;
+    border-bottom: 1px solid #ddd;
+}
+
+.header .inner .gnb .sub .sub_right .sub_con>li>a {
+    display: block;
+    line-height: 40px;
+    font-size: 14px;
+    color: var(--black-color);
+    border-bottom: 1px solid #ddd;
+}
+
+.header .inner .gnb .sub .sub_left {
+    order: -1;
+}
+
+.header .inner .gnb .sub .sub_left .img_box img {
+    object-fit: cover;
+    height: 377px;
 }
 
 .header .inner .util {
@@ -42,7 +92,30 @@
     color: var(--white-color)
 }
 
+.header:hover {
+    border-bottom: 1px solid #ddd;
+    background: var(--white-color);
+}
+
+.header:hover .logo a {
+    opacity: 0;
+}
+
+.header:hover h1 {
+    opacity: 1;
+    background: url(../images/logo_black.png);
+}
+
+.header:hover .gnb>ul>li>a {
+    color: var(--black-color);
+}
+
+.header:hover .util>a {
+    color: var(--black-color);
+}
+
 .header.on {
+    border-bottom: 1px solid #ddd;
     background: var(--white-color);
     transition: 0.3s;
 }
@@ -204,4 +277,56 @@
     max-width: 170px;
     max-height: 285px;
     margin: 0 30px 0 0;
+}
+
+
+
+
+
+
+.footer {
+    background: #444;
+}
+
+.footer .inner .ft {
+    padding: 40px 0;
+    border-bottom: 1px solid #555;
+}
+
+.footer .inner .ft .customer {
+    display: flex;
+    gap: 30px;
+}
+
+.footer .inner .ft .customer>li {
+    position: relative;
+    font-size: 14px;
+    color: #999;
+}
+
+.footer .inner .ft .customer>li~li::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -16px;
+    transform: translate(0, -50%);
+    width: 1px;
+    height: 8px;
+    background: #999;
+}
+
+.footer .inner .ft .customer>.b {
+    color: #ddd;
+    font-weight: 800;
+    font-size: 16px;
+}
+
+.footer .inner .fb {
+    padding: 40px 0;
+}
+
+.footer .inner .fb>ul>li {
+    line-height: 24px;
+    font-size: 14px;
+    color: #999;
 }
