--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 :root {
     --white-color: #ffffff;
     --line-color: #e6e6e6;
-    --line-color: #dddddd;
+    --black-color: #444444;
 }
 
 .blind {
