--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,8 @@
 :root {
     --white-color: #ffffff;
     --line-color: #e6e6e6;
-    --black-color: #444444;
+    --body-color: #333;
+    --black-color: #333;
 }
 
 .blind {
@@ -41,7 +42,7 @@
 
 .default .tit p {
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 300;
     text-align: center;
 }
 
